misc4.0/sigstore/policies/kyverno-tekton-attestation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-signature-and-chains-provenance-attestation
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: verify-signature
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespace:
              - test-kyverno  
      verifyImages:
      - imageReferences:
        - "quay.io/raffaelespazzoli/*"
        attestors:
        - count: 1
          entries:
          - keys:
              secret:
                name: signing-secrets
                namespace: openshift-pipelines
    - name: verify-provenance-attestation
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespace:
              - test-kyverno    
      verifyImages:   
      - imageReferences:
        - "quay.io/raffaelespazzoli/*"
        attestations:
          - predicateType: https://slsa.dev/provenance/v0.2
            attestors:
              - count: 1
                entries:
                  - keys:
                      secret:
                        name: signing-secrets
                        namespace: openshift-pipelines
